# currency-converter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/external_api/: __init__.py  freecurrencyapi.py
src/routers/: currency.py
