[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["ilapshin <igorlapshin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
